tests/vertical-slice/accept/generic_decl_bound_satisfied.hew
// Declaration-level generic bounds are satisfied by the instantiated argument.
type Box<T: Display> { value: T; }

fn main() {
    let _ = Box { value: 42 };
}
