tests/vertical-slice/reject/p0b_typedecl_bound_dropped.hew
// P0-B: declaration-level generic bounds must reject arguments without the trait.
type NoDisplay { n: i64; }
type Box<T: Display> { value: T; }

fn main() {
    let _ = Box { value: NoDisplay { n: 1 } };
}
